# rgui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: public-api.md  rml.md
examples/: basic_window.rs  debug_snapshot.rs  render_rects.rs  rml_showcase.rs  rml_widget_gallery.rml  rml_widget_gallery.rs  visual_showcase.rs  widgets.rs
src/: a11y.rs  debug.rs  images.rs  lib.rs  main.rs  svg.rs  text_engine.rs
src/adapters/: minimal_css.rs  minimal_html.rs  minimal_tailwind.rs  mod.rs  serde.rs
src/core/: a11y.rs  component.rs  element.rs  event.rs  geometry.rs  id.rs  layout.rs  mod.rs  overlay.rs  prelude.rs  render.rs  scroll.rs  snapshot.rs  (+3 more)
tests/: accessibility.rs  adapters.rs  animation_runtime.rs  architecture_unified.rs  context_menu.rs  core_snapshots.rs  drag_drop_runtime.rs  event_dispatch.rs  event_system.rs  geometry_contract.rs  hardcode_policy.rs  interactive_widgets.rs  layout_incremental_contract.rs  layout_pipeline.rs  layout_result_contract.rs  layout_taffy_contract.rs  modal_completion_contract.rs  native_api.rs  new_widgets_batch1.rs  overlay_focus_scope.rs  overlay_pipeline.rs  portal_taffy_layout.rs  reconciliation.rs  render_validation.rs  render_wgpu_offscreen_render.rs  render_wgpu_render_items.rs  rml.rs  rml_attribute_matrix.rs  runtime_architecture.rs  runtime_command_handlers.rs  runtime_pipeline.rs  runtime_state_arena.rs  scroll_layout_contract.rs  scrollbar_pointer_capture.rs  taffy_first_runtime.rs  taffy_layout_parity.rs  text_cursor_hit_testing.rs  text_input_contract.rs  text_layout_contract.rs  text_system.rs  (+10 more)
(+62 files in other folders)
